--- a/e-commerce-dashboard/src/App.css
+++ b/e-commerce-dashboard/src/App.css
@@ -1,6 +1,168 @@
-*{
-  margin:0px;
+@import url("https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
+* {
+  margin: 0px;
   padding: 0px;
 }
+body {
+  font-family: "Lato", "san-serif";
+  font-size: 14px;
+}
+.bg-blue {
+  background: #233a95;
+}
+.headerWrapper .top-strip {
+  padding: 8px 0px;
+}
+.headerWrapper .top-strip p{
+  color: #ffff;
+  font-size: 16px;
+  font-weight: 500;
+}
+.headerWrapper .header{
+  width: 100%;
+  height: auto;
+  padding: 15px 0px;
+}
+.logoWrapper img{
+  width: 100%;
+}
+.headerWrapper .header .part2 .countryDrop{
+  width: 170px;
+  height: 60px;
+  min-width: 170px;
+  color: #000;
+  border: 1px solid rgb(0, 0, 0,0.7);
+  border-radius: 7px;
+  padding: 10px 15px;
+}
+.headerWrapper .header .part2 .countryDrop{
+  text-align: left;
+  justify-content: flex-start;
+}
+.headerWrapper .header .part2 .countryDrop .label{
+  font-size: 12px !important;
+  text-transform: capitalize !important;
+  color: rgb(0, 0, 0,0.5) !important;
+  line-height: 18px;
+}
+.headerWrapper .header .part2 .countryDrop .name{
+  font-size: 14px !important;
+  font-weight: 700;
+  text-transform: capitalize !important;
+  color: #233a95 !important;
+  line-height: 20px;
+}
+.headerWrapper .header .part2 .countryDrop span.ml-auto svg{
+  opacity: 0.7;
+}
+header .headerSearch{
+  width: 60%;
+  height: 60px;
+  background: #f3f4f7;
+  padding: 10px;
+  border-radius: 10px;
+  position: relative;
+  border: 1px solid rgb(0, 0, 0,0.1);
+}
+header .headerSearch input{
+  background-color: transparent !important;
+  outline: none !important;
+  width: 100%;
+  height: 40px;
+  border: none;
+  border: 0px;
+  font-size: 18px;
+  padding: 0px 20px;
+  color: rgb(0, 0, 0,0.6);
+}
+header .headerSearch input::-webkit-input-placeholder{
+  color: rgba(0, 0, 0,0.5);
+}
+header .headerSearch Button{
+  outline: none;
+  position: absolute;
+  color: #3e445a;
+  border-radius: 50%;
+  top: 6px;
+  right: 5px;
+  z-index: 100;
+  min-width: 40px !important;
+  height: 40px !important;
+  width: 40px !important;
+}
+header .headerSearch .searchIcon{
+  font-size: 35px;
+}
+header .part3 .circle{
+  outline: none;
+  height: 50px;
+  width: 50px;
+  font-size: 25px;
+  color: #000;
+  align-items: center;
+  border: 1px solid rgb(0, 0, 0,0.1);
+  border-radius: 50%;
+}
+header .part3 .circle .svg{
+  font-size: 22px;
+}
+header .cartTab .cartIcon{
+  height: 50px;
+  width: 50px;
+  outline: none;
+  border: 1px solid rgb(0, 0, 0,0.1);
+  border-radius: 50%;
+  font-size: 35px;
+  color: #ea2b0f;
+}
+header .cartTab .cartIcon svg{
+  font-size: 30px;
+}
+header .cartTab .price{
+  font-size: 18px;
+  font-weight: 700;
+}
+nav .container .navpart1 Button {
+  outline: none;
+  color: white;
+  height: 45px;
+  width: 100%;
+  background: #2bbef9;
+  padding: 8px 10px;
+  border-radius: 30px;
+  justify-content: space-between;
+  align-items: center;
+}
+nav .allCatTab:hover{
+  background: #2bbef9;
+}
+nav .allCatTab .text{
+  font-weight: 600;
+}
+nav .allCatTab .icon1{
+  font-size: 20px;
+}
+nav .allCatTab .icon2{
+  font-size: 20px;
+}
+nav .navpart2 ul{
+  margin-bottom: 0px;
+  justify-content: space-evenly;
+}
+nav .navpart2 ul li a{
+  color: #3e445a;
+  font-family: "Dosis";
+  font-weight: 600;
+  text-decoration: none;
+  text-transform: uppercase;
+  display: flex;
+  align-items: center;
+  padding: 10px 15px;
+  transition: all 0.2s ease-in-out;
+  border-radius: 25px;
 
-@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+}
+nav .navpart2 ul li a:hover{
+  color: #2bbef9;
+  background: #f0faff;
+}
