--- a/e-commerce-dashboard/src/App.css
+++ b/e-commerce-dashboard/src/App.css
@@ -546,7 +546,7 @@ position: relative;
 .productItem .imgwrapper:hover .actions{
   visibility: inherit;
   opacity: 1;
-  transition: all 0.5s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 .productItem .actions Button{
   display: flex;
@@ -563,7 +563,7 @@ position: relative;
   transition: all 0.1s ease-in-out;
   /* background: transparent; */
   box-shadow: 0 1px 3px rgb(0 0 0 / 12%), 0 1px 2px rgb(0 0 0 / 24%) !important;
-  transition:  0.3s ease-in-out;
+  transition:  0.2s ease-in-out;
 
 }
 .product_row .imgwrapper{
@@ -718,4 +718,14 @@ button.ml-2 {
 
 img.mr-2 {
   width:100%;
+}
+
+.emptyCart{
+  justify-content: center;
+  align-items: center;
+}
+
+.orderCart{
+  justify-content: center;
+  align-items: center;
 }
