--- a/e-commerce-dashboard/src/App.css
+++ b/e-commerce-dashboard/src/App.css
@@ -503,8 +503,9 @@ position: relative;
 }
 .price{
   display: inline;
-  gap:10px;
-  font-family:"dosis"
+  gap:5px;
+  font-family:"dosis";
+  text-wrap:wrap
 }
 .oldPrice{
   color: rgb(0, 0, 0,0.3);
@@ -516,6 +517,7 @@ position: relative;
   font-size: 19.5px;
 }
 .newPrice{
+  display: inline-flex;
   font-weight: 600;
   font-size: 18px;
   text-wrap: wrap;
@@ -569,10 +571,10 @@ position: relative;
   flex-direction: column;
   gap: 10px;
   top:10px;
-  right: -100%;
+  right: -10%;
   visibility: hidden;
   opacity: 0;
-  z-index: 100;
+  /* z-index: 100; */
   transition: all 0.3s ease-in-out;
 
 }
