--- a/e-commerce-dashboard/src/App.css
+++ b/e-commerce-dashboard/src/App.css
@@ -509,7 +509,9 @@ position: relative;
   display: inline;
   gap:5px;
   font-family:"dosis";
-  text-wrap:wrap
+  text-wrap:wrap;
+  justify-content: center;
+  align-items: center;
 }
 .oldPrice{
   color: rgb(0, 0, 0,0.3);
@@ -521,10 +523,12 @@ position: relative;
   font-size: 19.5px;
 }
 .newPrice{
-  display: inline-flex;
+  display: block;
   font-weight: 600;
   font-size: 18px;
   text-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 }
 .newPrice.lg{
   font-weight: 600;
