--- a/e-commerce-dashboard/src/App.css
+++ b/e-commerce-dashboard/src/App.css
@@ -10,7 +10,7 @@
 .cursor{cursor: pointer;}
 .info .text-light{color: #9b9bb4 !important}
 .text-sml{font-size: 12px;}
-
+/*body css  */
 body {
   font-family: "Lato", "san-serif";
   font-size: 14px;
