comment added to App.css

--- a/e-commerce-dashboard/src/App.css
+++ b/e-commerce-dashboard/src/App.css
@@ -20,6 +20,7 @@ body {
 .bg-blue {
   background: #233a95;
 }
+/*heder css start  */
 .headerWrapper {
   border-bottom: 1px solid rgb(0, 0, 0,0.1);
   padding-bottom: 10px;
