comments added for transition in line 37 App.css

--- a/e-commerce-dashboard/src/App.css
+++ b/e-commerce-dashboard/src/App.css
@@ -34,7 +34,7 @@ body {
   justify-content:center;
   align-items: center;
 }
-
+/*key frames added for transision  */
 @keyframes scroll-text {
   0% {
     transform: translateX(100%); /* Start off the right edge */
