header comments added in line 226 App.css

--- a/e-commerce-dashboard/src/App.css
+++ b/e-commerce-dashboard/src/App.css
@@ -223,6 +223,7 @@ header .cartTab .price{
   font-size: 18px;
   font-weight: 700;
 }
+/*header css starts here  */
 nav .container .navpart1 .catwrapper .allCatTab {
   outline: none;
   color: white;
